--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,28 @@
+@font-face {
+  font-family: 'CodecProLight';
+  src: url('./assets/CodecProLight.ttf');
+}
+
+@font-face {
+  font-family: 'CodecProExtralight';
+  src: url('./assets/CodecProExtralight.ttf');
+}
+
+@font-face {
+  font-family: 'CodecProRegular';
+  src: url('./assets/CodecProRegular.ttf');
+}
+
+@font-face {
+  font-family: 'CodecProNews';
+  src: url('./assets/CodecProNews.ttf');
+}
+
+@font-face {
+  font-family: 'CodecProExtrabold';
+  src: url('./assets/CodecProExtrabold.ttf');
+}
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -85,23 +110,17 @@ body {
   overflow-x: hidden;
 }
 
+@media screen and (max-width: 500px) {
+    body {
+      background-color: #F8F8F8 !important;
+    }
+}
+
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: white;
 }
 
 a {
   color: inherit;
   text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
